--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "3.1.3",
-    "react-router-dom": "4.2.2"
+    "react-motion": "^0.5.2",
+    "react-router-dom": "4.2.2",
+    "rxjs": "^5.5.6",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
